# adb_sequence

./: ActionEditDialog.cpp  CMakeLists.txt  KeyboardWidget.cpp  KeyboardWidget.h  README.md  RecordAction.cpp  SwipeBuilderWidget.cpp  SwipeBuilderWidget.h  SwipeCanvas.cpp  SwipeCanvas.h  SwipeModel.cpp  SwipeModel.h  adb_client.cpp  adb_client.h  argsparser.h  commandexecutor.cpp  commandexecutor.h  control_protocol.cpp  control_protocol.h  control_socket.cpp  control_socket.h  h264decoder.cpp  h264decoder.h  main.cpp  main_d.cpp  mainwindow.cpp  mainwindow.h  remoteserver.cpp  remoteserver.h  sequencerunner.cpp  sequencerunner.h  settingsdialog.cpp  settingsdialog.h  swipecanvas.cpp  swipecanvas.h  video_client.cpp  video_client.h  video_worker.cpp  video_worker.h
android/: DeviceControl.java  ScreenEncoder.java  Server.java  ServiceManager.java  SurfaceControl.java  android_grabbed.cpp  build_android_grabbed.sh  build_dex.sh
